# local-embed-gen

./: .gitignore  README.md  generate_embeddings.sh  main.py  pyproject.toml
configs/: supported_models.json
scripts/: generate_embeddings.py
src/: generate_embeddings.py  gte_embedding_base.py
