[project]
name = "local-embed-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "fastembed>=0.7.1",
    "fastparquet>=2024.11.0",
    "flagembedding>=1.3.5",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pylate>=1.2.0",
    "sentence-transformers>=4.0.2",
]
